--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -46,20 +46,21 @@
     <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
     {% endif %}
     
-    {% if post.citation %}
-      <p>{{ post.citation }}</p>
-    {% endif %}
     
     {% if post.collection == 'teaching' %}
     <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
   {% elsif post.collection == 'publications' or post.collection == 'portfolio' %}
-    <p>{{ post.venue }}, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+  <p>
+  {% if post.citation %}
+  {{ post.citation }} <br/>
+  {% endif %}
+    {{ post.venue }} {{ post.date | default: "1900-01-01" | date: "%Y" }} 
+      <br/>
+      <a href="{{ post.paperurl }}">Paper</a>  {% if post.code %}<a href="{{ post.code }}">Code</a>{% endif %}
+    </p>
   {% elsif post.date %}
    <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
   {% endif %}
 
-  {% if post.collection == 'publications' or post.collection == 'portfolio' %}
-  <a href="{{ post.paperurl }}">Paper</a>
-  {% endif %}
   </article>
 </div>
