--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -31,6 +31,9 @@
       {% if author.uri %}
         <li><a href="{{ author.uri }}"><i class="fas fa-fw fa-link" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].website_label | default: "Website" }}</a></li>
       {% endif %}
+      {% if author.cv %}
+        <li><a href="https://drive.google.com/file/d/1UVrQJ3nzorBrD6mTRk5zpDF7-NLQWQWq/view?usp=share_link"><i class="fas fa-fw fa-folder" aria-hidden="true"></i> CV </a></li>
+      {% endif %}
       {% if author.email %}
         <li><a href="mailto:{{ author.email }}"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].email_label | default: "Email" }}</a></li>
       {% endif %}
