--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -29,8 +29,10 @@
     <h2 class="archive__item-title" itemprop="headline">
       {% if post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ post.paperurl }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
-      {% else %}
+      {% elsif post.paperurl %}
         <a href="{{ post.paperurl }}" rel="permalink">{{ title }}</a>
+      {% else %}
+        <a href="{{ post.link_res }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
     
@@ -56,7 +58,7 @@
   {% endif %}
     {{ post.venue }} {{ post.date | default: "1900-01-01" | date: "%Y" }} 
       <br/>
-      <a href="{{ post.paperurl }}">Paper</a>  {% if post.code %}<a href="{{ post.code }}">Code</a>{% endif %}
+      {% if post.paperurl %}<a href="{{ post.paperurl }}">Paper</a>{% endif %}  {% if post.code %}<a href="{{ post.code }}">Code</a>{% endif %}
     </p>
   {% elsif post.date %}
    <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
